Fix contrast issues on form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ header a:hover {
 }
 
 .text-input {
-    background: grey;
+    background: rgb(0, 0, 0);
     color: #fafafa;
     width: 100%;
     height: 25px;
@@ -215,8 +215,8 @@ header a:hover {
     padding: 15px 32px 15px 32px;
     text-align: center;
     font-size: 100%;
-    background-color: #ff0000;
-    color: #fafafa;
+    background-color: #ffffff;
+    color: #000000;
 }
 
 .form-image {
